htmm .wrap corrected, css modified

--- a/game/style.css
+++ b/game/style.css
@@ -111,8 +111,6 @@ p {
 .wrap {
     margin: 0 auto;
     position: relative;
-    /* height: 720px;
-    width: 1280px; */
     z-index: 5;
 }
 
@@ -122,7 +120,8 @@ p {
     width: 27px;
     position: absolute;
     top: 20px;
-    right: 130px;
+    left: calc(50% + 525px);
+    cursor: pointer;
     display: none;
 }
 
@@ -132,7 +131,8 @@ p {
     width: 30px;
     position: absolute;
     top: 20px;
-    right: 80px;
+    left: calc(50% + 575px);
+    cursor: pointer;
     display: none;
 }
 
